optimizing code duplication